--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
 body {
     background: rgb(0, 0, 0);
     background: linear-gradient(151deg, #000000 19%, #0a4637 100%);
     color: #fff;
-    font-family: 'SF Pro', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 15px;
     letter-spacing: 2px;
     margin-bottom: 20vh;
@@ -85,11 +93,12 @@ a i:hover{
 }
 
 .footer {
-    font-family: 'SF Pro', sans-serif;
+    font-family: 'Poppins', sans-serif;
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
+    height: 3%;
     background-color: red;
     color: white;
     text-align: center;
